k8s/gateway-api/httproutes/argocd.yaml
# HTTPRoute for argocd namespace
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - name: stoa
      namespace: nginx-gateway
  hostnames:
    - argocd.gostoa.dev
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
